--- a/pages/byStages/byStages.wxss
+++ b/pages/byStages/byStages.wxss
@@ -1,10 +1,16 @@
-/* pages/cards_project/cards_project.wxss */
 page{
   padding-top: 20rpx;
   background-color: #eee;
 }
-.section{
-  position: relative;
+.pay{
+  padding: 28rpx;
+  color: #333;
+  background-color: #fff;
+}
+.title{
+  padding: 10rpx 0 10rpx 20rpx;
+  color: #999;
+  font-size: 24rpx;
 }
 .card-container{
   padding: 30rpx;
@@ -64,3 +70,16 @@ page{
   color: #fff;
   background-color: #e7004c;
 }
+.recharge-content{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 1.6;
+  padding: 20rpx;
+  background-color: #fff;
+  font-size: 28rpx;
+}
+.recharge-content .red{
+  color: red;
+}
+
